# NeuralNetwork_v2

./: .gitignore  CMakeLists.txt  README.md  error_result_file.csv  input2bb.txt  targets2b.txt  targets2bb.txt
program/: CMakeLists.txt
program/src/: main.cpp
